# medical-cv-project-main

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README-mlflow-dvc.md  README.md  dvc.yaml  handover_prompt.md  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd-docker.yml  ci.yml  deploy-inference.yml  nightly.yml
app/: main.py  metrics.py  model_io.py
ci/: quality_gate.py  register_and_promote.py
k8s/: k8s-deployment-canary.yaml  k8s-deployment.yaml  k8s-hpa.yaml  k8s-ingress-canary.yaml  k8s-ingress.yaml  k8s-namespace.yaml  k8s-service-canary.yaml  k8s-service.yaml
medical_cv_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlops/: docker-compose.deploy.yaml  docker-compose.mlflow.yaml  gates.yaml
scripts/: load_test.ps1  model_card.py  smoke_canary.py  train_model.py
src/data/: __init__.py  preprocess.py
src/training/: eval.py  train.py
src/utils/: io.py  metrics.py  mlflow_ready.py
