[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-cv-serve"
version = "0.0.1"
description = "Baseline FastAPI model service"
authors = [{name="you"}]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pydantic>=2.0",
]

[tool.setuptools]
packages = ["app"]
