[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-cv-project"
version = "0.1.0"
description = "Medical CV project"
requires-python = ">=3.11"

dependencies = [
  "fastapi",
  "uvicorn",
  "mlflow==2.18.0",
  "dvc[all]==3.51.2",
  "boto3",
  "scikit-learn==1.7.2",
  "numpy",
  "pandas",
  "matplotlib",
  "pyyaml",
  "joblib",
  "skl2onnx",
  "onnxruntime",
  "prometheus-client"
]

[tool.setuptools]
packages = ["app"]
